Add action refresh tokens
