# specs/openapi/swagger.yml
@@ -110,6 +110,16 @@ paths:
           $ref: '#/components/responses/301'
         500:
           $ref: '#/components/responses/500'
+  /auth/refresh-tokens:
+    post:
+      tags: [ auth ]
+      operationId: refreshTokens
+      summary: Обновить токены
+      responses:
+        200:
+          $ref: '#/components/responses/200'
+        403:
+          $ref: '#/components/responses/403'
   /auth/logout:
     post:
       tags: [ auth ]
